--- a/styles/custom.css
+++ b/styles/custom.css
@@ -32,7 +32,7 @@ blockquote > p {
   margin: 55px 0 0 -140px;
 }
 
-#simplify-complexify blockquote p {
+blockquote.large p {
   font-size: 1.5em;
   line-height: 1.25;
 }
