--- a/styles/custom.css
+++ b/styles/custom.css
@@ -53,6 +53,9 @@ iframe.image {
   width: 100%;
   height: 420px;
 }
+.slide figure.cover.width.margin > :first-child {
+  width: 88%
+}
 
 
 /* Various */
